[tool.poetry]
name = "issyf"
version = "0.1.0"
description = ""
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
