[tool.poetry]
name = "issyf"
version = "0.1.0"
description = ""
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
spotipy = { git = "https://github.com/plamere/spotipy", rev = "4c2c1d763a3653aa225c4af848409ec31286a6bf" }
requests = "^2.20"
pillow = "^5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
